Bug 334400 - create SVG transform list lazily.  r=jwatt, sr=roc