content/svg/content/src/nsSVGGraphicElement.h
@@ -51,7 +51,6 @@ class nsSVGGraphicElement : public nsSVGGraphicElementBase,
 {
 protected:
   nsSVGGraphicElement(nsINodeInfo *aNodeInfo);
-  nsresult Init();
   
 public:
   // interfaces:  
@@ -62,11 +61,22 @@ public:
   // nsIContent interface
   NS_IMETHOD_(PRBool) IsAttributeMapped(const nsIAtom* aAttribute) const;
 
+  // Used by frames to get consolidation matrix of transform list
+  already_AddRefed<nsIDOMSVGMatrix> GetLocalTransformMatrix();
+
 protected:
   // nsSVGElement overrides
   virtual PRBool IsEventName(nsIAtom* aName);
   
+  virtual nsresult BeforeSetAttr(PRInt32 aNamespaceID, nsIAtom* aName,
+                                 const nsAString* aValue, PRBool aNotify);
+
   nsCOMPtr<nsIDOMSVGAnimatedTransformList> mTransforms;
+
+  // helper
+  nsresult CreateTransformList();
+  nsresult AppendLocalTransform(nsIDOMSVGMatrix *aCTM,
+                                nsIDOMSVGMatrix **_retval);
 };
 
 #endif // __NS_SVGGRAPHICELEMENT_H__
